# pedal-bench

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  requirements.txt
backend/: .env.example  pyproject.toml
backend/pedal_bench/: __main__.py  config.py  server.py
backend/pedal_bench/api/: app.py  deps.py  schemas.py
backend/pedal_bench/core/: decoders.py  hints.py  inventory_index.py  inventory_store.py  models.py  project_store.py  shortage.py  solder_consumption.py
backend/pedal_bench/data/: debug_topologies.json  enclosures.json  layout_presets.json  orientation_hints.json  suppliers.json
backend/pedal_bench/io/: ai_bom_extract.py  ai_component_verify.py  ai_diagnose.py  ai_drill_extract.py  aionfx_drill.py  aionfx_extract.py  aionfx_fetch.py  aionfx_pdf.py  build_import.py  diylc_extract.py  drill_template_extract.py  mouser_lookup.py  pedalpcb_extract.py  pedalpcb_fetch.py  pedalpcb_pdf.py  stl_builder.py  tayda_drill_api.py  tayda_export.py  tayda_import.py  taydakits_extract.py  taydakits_fetch.py
backend/tests/: test_ai_bom_extract.py  test_ai_component_verify.py  test_ai_diagnose.py  test_ai_drill_extract.py  test_aionfx_fetch.py  test_aionfx_pdf.py  test_decoders.py  test_diylc_extract.py  test_inventory_index.py  test_inventory_routes.py  test_inventory_store.py  test_mouser_lookup.py  test_pedalpcb_fetch.py  test_pedalpcb_pdf.py  test_shortage.py  test_solder_consumption.py  test_stl_builder.py  test_tayda_drill_api.py  test_tayda_export.py  test_tayda_import.py  test_taydakits_extract.py
backend/tests/data/: pedalpcb_circulator.html  taydakits_fuzz_face_wiring.html  (+3 more)
(+99 files in other folders)
