[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pedal-bench"
version = "0.3.0"
description = "Bench copilot for DIY guitar pedal builds — PedalPCB BOM import, build checklist, and 3D-printable drill guides."
requires-python = ">=3.12,<3.14"
authors = [{ name = "Chris Crouse" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pdfplumber>=0.11",
    "pypdfium2>=4.30",
    "build123d>=0.7",
    "Pillow>=10",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "trimesh>=4.0",
    "ruff>=0.8",
]

[project.scripts]
pedal-bench = "pedal_bench.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pedal_bench*"]

[tool.setuptools.package-data]
pedal_bench = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:ezdxf.*",
    "ignore::DeprecationWarning:build123d.*",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # rely on formatter for line length
